gallery box layout correction (remove gap between picture and caption))

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ nav ul li{
 }
 
 .pic_container{
-    height: 25vh;
+    height: 170px;
     overflow: hidden;
 }
 
